--- a/demo.html
+++ b/demo.html
@@ -42,9 +42,9 @@
         Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,
     </p>
     <p>This paste expires in &lt;8 hours. Public IP access. Share whatever you see with others in seconds with Context.</p>
-    <a href="https://ctxt.io/2/AABokLNDEw">https://ctxt.io/2/AABokLNDEw</a>
+    <a href="https://ctxt.io/2/AACob5gLFg">https://ctxt.io/2/AABokLNDEw</a>
     <br>
     <br>
-    <a href="https://ctxt.io/2/AACoNwr3FA">https://ctxt.io/2/AACoNwr3FA</a>
+    <a href="https://ctxt.io/2/AACod9hXFg">https://ctxt.io/2/AACoNwr3FA</a>
 </body>
 </html>
